fixed alignment of forms

--- a/src/pages/LoginPage/LoginPage.css
+++ b/src/pages/LoginPage/LoginPage.css
@@ -1,6 +1,6 @@
-.image-container {
-    width:45%;
-    margin:0;
+.login-page .image-container {
+    width:40%;
+    margin: 0;
 }
 
 .login-page .image-container img{
@@ -122,7 +122,7 @@ form .input-icon-container {
     border-bottom: 1px solid;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .login-page {
         flex-direction: column;
         align-items: flex-start;
@@ -130,6 +130,7 @@ form .input-icon-container {
 
     .login-page .image-container {
         width: fit-content;
+        margin: 0 auto;
     }
 
     .login-page .form-container {
