--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -8,12 +8,8 @@
     margin: 0;
     align-self: flex-start;
     position:sticky;
-    width:45%;
+    width:40%;
     min-width: 30rem;
-}
-
-.sign-up-page .form-container {
-    width: 40%;
 }
 
 .sign-up-page form {
@@ -32,7 +28,7 @@
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1000px) {
     .sign-up-page {
         flex-direction: column;
         align-items: flex-start;
@@ -40,9 +36,11 @@
 
     .sign-up-page .image-container {
         width: fit-content;
+        margin: 0 auto;
     }
 
     .sign-up-page .form-container {
         width: 100%;
+        margin: 0 auto;
     }
 }
